# BitcoinCalculator

./: CMakeLists.txt  Config.cmake.in  README.md  calculator.cpp  keys.cpp
.devcontainer/: Dockerfile
include/: expression.hpp  grammar.hpp  leaves.hpp  machine.hpp  match.hpp  nodes.hpp  operators.hpp  parse.hpp  pattern.hpp  replace.hpp  symbol.hpp  type.hpp  value.hpp
include/Diophant/: expression.hpp  grammar.hpp  machine.hpp  nodes.hpp  operators.hpp  parse.hpp  pattern.hpp  replace.hpp  symbol.hpp  type.hpp  value.hpp
include/Diophant/built.in/: base58.hpp  bool.hpp  hash.hpp  hd.hpp  modular.hpp  numbers.hpp  pubkey.hpp  scriptnum.hpp  string.hpp
include/Diophant/parse/: base58.hpp  base64.hpp  error.hpp  grammar.hpp  literals.hpp  parser.hpp  whitespace.hpp
include/Diophant/values/: lambda.hpp  leaf.hpp  list.hpp  struct.hpp
include/built.in/: base58.hpp  hash.hpp  modular.hpp  pubkey.hpp  scriptnum.hpp  string.hpp
include/parse/: grammar.hpp
include/values/: lambda.hpp  leaf.hpp  list.hpp  struct.hpp
source/: expression.cpp  initialize.cpp  machine.cpp  nodes.cpp  parse.cpp  pattern.cpp  replace.cpp  type.cpp
source/Diophant/: expression.cpp  initialize.cpp  machine.cpp  nodes.cpp  parse.cpp  pattern.cpp  replace.cpp  symbol.cpp  type.cpp
source/Diophant/built.in/: base58.cpp  bool.cpp  hash.cpp  hd.cpp  modular.cpp  numbers.cpp  pubkey.cpp  scriptnum.cpp  string.cpp
source/Diophant/values/: list.cpp  struct.cpp
source/built.in/: base58.cpp  bool.cpp  hash.cpp  modular.cpp  numbers.cpp  pubkey.cpp  scriptnum.cpp  string.cpp
source/values/: list.cpp
test/: CMakeLists.txt  match.cpp  test_interpreter.cpp
